# expenseTracker

./: .gitignore  App.js  MainApp.js  TODO.md  ThemeContext.js  app.json  database.js  docker-compose.yml  package-lock.json  package.json  themes.js
android/: .gitignore  app.config.js  app.json  package.json  tsconfig.json
android/android/: gradle.properties  settings.gradle
android/app/: _layout.tsx  build.gradle  login.tsx
android/common/: commonStyles.ts
android/src/: App.ts  ThemeContext.tsx
app/: _layout.tsx
components/: ExpenseItem.js  ExpenseList.js
database/: theme.js  transactions.js
ios/: Podfile
screens/: AnalyticsScreen.js  ExportScreen.js  HomeScreen.js  SettingsScreen.js
server/: .env  Dockerfile  docker-compose.yml  package.json  tsconfig.json
sms_classifier/: Dockerfile  Makefile  pyproject.toml
sms_classifier/app/: main.py
sms_classifier/app/model/: sms_transaction_classifier.joblib
sms_classifier/app/train/: TfidfLogisticRegression.py
sms_parser/: pyproject.toml
sms_parser/sms_parser/: cli.py
sms_parser/sms_parser/data/: train_category.json
sms_parser/sms_parser/data/classification/: created_data.jsonl  generate.py  train_classification.json
sms_parser/sms_parser/data/ner/: generate.py  ner_dataset.json  train_ner.json
sms_parser/sms_parser/training/: train_category.py  train_classifier.py  train_ner.py
sms_parser/sms_parser/utils/: preprocessing.py
src/: App.ts  ThemeContext.tsx
therme/: catppuccin.js
worker/: Dockerfile  package.json  queue.ts  tsconfig.json  wait-for-all.sh  wait-for-it.sh  worker.ts
(+84 files in other folders)
